adding live, live-sport and footer section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-content">
             <h4>Try up to one month free</h4>
             <img src="img/logo.png" alt="hulu" class="logo">
-            <div class="header-text-1">Watch thousands of TV shows and movies.</div>
+            <div class="header-text-1">Watch thousands of TV shows and movies</div>
             <div class="header-text-2">HBO Max, SHOWTIME, CINEMAX and STARZ available as add-ons</div>
             <button class="btn btn-cta">Start Your Free Trial</button>
             <div class="legal-text">Free trial for new & eligible returning subscribers only.</div>
@@ -77,6 +77,94 @@
             </div>
         </div>
     </section>
+    <section class="live">
+        <div class="live-border">
+            <h4>Hulu + Live TV</h4>
+            <div class="text-xl">Live TV Makes It Better</div>
+            <div class="sub-text">Make the switch from cable. Get 75+ top channels with your favourite 
+                live sports, news and events = plus the entire Hulu streaming library.
+            </div>
+            <div class="legal-text">Live TV plan required, Regional restrictions, blackouts and additional terms 
+                applied. See details
+            </div>
+            <a href="#">View Channels In Your Area</a>
+        </div>
+    </section>
+
+    <section class="live-sport">
+        <div class="live-sport-content">
+            <div class="text-xl">Live Sports</div>
+            <div class="sub-text">Catch your games at home or on the go. Stream live games from major college and pro leagues icluding the NCAA, NBA, NHL, NFL and more</div>
+            <div class="live-sport-logos">
+                <div>
+                    <img src="img/live-sports-logo-1.png" alt="">
+                </div><div>
+                    <img src="img/live-sports-logo-2.png" alt="">
+                </div><div>
+                    <img src="img/live-sports-logo-3.svg" alt="">
+                </div><div>
+                    <img src="img/live-sports-logo-4.png" alt="">
+                </div>
+            </div>
+            <div class="legal-text">
+                Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-lists">
+                <ul>
+                    <li class="list-head">BROWSE</li>
+                    <li><a href="#">Streaming Library</a></li>
+                    <li><a href="#">Live TV</a></li>
+                    <li><a href="#">Live News</a></li>
+                    <li><a href="#">Live Sports</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">TV Shows</a></li>
+                    <li><a href="#">Movies</a></li>
+                    <li><a href="#">Originals</a></li>
+                    <li><a href="#">Networks</a></li>
+                    <li><a href="#">Kids</a></li>
+                    <li><a href="#">FX on Hulu</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">HBO Max</a></li>
+                    <li><a href="#">Cinemax</a></li>
+                    <li><a href="#">Showtime</a></li>
+                    <li><a href="#">STARZ</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Disney Bundle Trio Basic</a></li>
+                    <li><a href="#">Disney Bundle Trio Premium</a></li>
+                    <li><a href="#">Disney Bundle Duo Basic</a></li>
+                    <li><a href="#">Student Discount</a></li>
+                </ul>
+                <ul>
+                    <li class="list-head">HELP</li>
+                    <li><a href="#">Account & Billing</a></li>
+                    <li><a href="#">Plans & Pricing</a></li>
+                    <li><a href="#">Supported Devices</a></li>
+                    <li><a href="#">Accessibility</a></li>
+                </ul>
+                <ul>
+                    <li class="list-head">ABOUT US</li>
+                    <li><a href="#">Shop Hulu</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="divider"></div>
+            <div class="social-icons">
+                <a href="#"><img src="img/facebook.svg" alt=""></a>
+                <a href="#"><img src="img/twitter.svg" alt=""></a>
+                <a href="#"><img src="img/youtube.svg" alt=""></a>
+                <a href="#"><img src="img/instagram.svg" alt=""></a>
+            </div>
+        </div>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
