fix footer-list class mispelling

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </section>
     <footer class="footer">
         <div class="footer-container">
-            <div class="footer-lists">
+            <div class="footer-list">
                 <ul>
                     <li class="list-head">BROWSE</li>
                     <li><a href="#">Streaming Library</a></li>
